--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US" class="no-js">
 
 <!-- Mirrored from sumoni.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 15 Apr 2020 04:52:54 GMT -->
@@ -248,7 +248,7 @@ margin: 0 auto;
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner vc_custom_1448613748265"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<p>Experienced marketing analyst/data analyst with a passion for diving into data to identify key pieces of information that will improve marketing ROI or provide insights for marketers to make better business decisions.Self-starter with a persistent, tenacious approach to learning new things.</p>
+			<p>Motivated and Enthusiastic in learning and working on Robotic Arm Manipulation. Experience in Robotics software, as well as hardware projects and, have tutored several ECE undergrad courses. Skilled in ROS, C++, Python, MATLAB, Embedded C, Solidworks. Recipient of WPI Young Women Investigating Scholarship and a Mentor in the Women Research and Mentorship Program at WPI. Believe in progress as a team. </p>
 
 		</div>
 	</div>
