--- a/index.html
+++ b/index.html
@@ -568,14 +568,15 @@ margin: 0 auto;
                     <div class="exp-holder margTop">
 						<div class="exp">
 						        <div class="hgroup">
-						            <h4>Bachelor Degree – Mutation Media </h4>
-						            <h6><i class="icon-calendar-2"></i>Mar 2015 - May 2015</h6>
+						            <h4>Master of Science - Robotics Engineering </h4>
+						            <h6><i class="icon-calendar-2"></i>Aug 2018 - May 2020</h6>
 						        </div>
-						        <p>Ut enim ad minim veniam, quis nostrud exerc. Irure dolor in reprehend incididunt labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+						        <p>Worcester Polytechnic Institute</p>
+							<p> GPA: 3.75</p>
 						    </div><div class="exp">
 						        <div class="hgroup">
-						            <h4>Bachelor Degree – Mutation Media </h4>
-						            <h6><i class="icon-calendar-2"></i>Sept 2015 - Nov 2015</h6>
+						            <h4>Bachelor of Engineering – Electronics and Telecommunication Engineering</h4>
+						            <h6><i class="icon-calendar-2"></i>Aug 2014 - June 2018</h6>
 						        </div>
 						        <p>Ut enim ad minim veniam, quis nostrud exerc. Irure dolor in reprehend incididunt labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 						    </div><div class="exp">
