--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ margin: 0 auto;
 	<div class="wpb_text_column wpb_content_element  profile">
 		<div class="wpb_wrapper">
 			<h1>Snehal Dikhale</h1>
-<h3>ROBOTIC ENGINEER</h3>
+<h3>ROBOTICS ENGINEER</h3>
 
 		</div>
 	</div>
